.metadata/.plugins/org.eclipse.cdt.ui/sum.build.log
16:15:52 **** Incremental Build of configuration Debug for project sum ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\sum.o" "..\\src\\sum.c" 
..\src\sum.c: In function 'main':
..\src\sum.c:37:4: error: expected '}' before 'else'
    else{
    ^~~~
..\src\sum.c:40:9: error: 'EXIT_SUCCESS' undeclared (first use in this function)
  return EXIT_SUCCESS;
         ^~~~~~~~~~~~
..\src\sum.c:40:9: note: each undeclared identifier is reported only once for each function it appears in
..\src\sum.c: At top level:
..\src\sum.c:42:1: error: expected identifier or '(' before '}' token
 }
 ^

16:15:52 Build Failed. 3 errors, 0 warnings. (took 176ms)

